# will-my-train-arrive

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  server.py  settings.yaml
app/: configuration.py
app/controllers/: __init__.py  api.py  welcome.py
app/static/css/: style.css
app/static/js/: app.js  crs_codes.js  stations.js
app/views/: layout.html
app/views/partial/: footer.html  header.html  nav.html
app/views/welcome/: about.html  index.html
domain/: api.py  service.py
infrastructure/: hsp.py
